@@ -26,6 +26,31 @@ WORKDIR /app
 COPY --from=builder /app/target/*.jar application.jar
 
 EXPOSE 7777
-EXPOSE 9090
+
+ENV JAVA_OPTS="\
+-Xms2g \
+-Xmx2g \
+-XX:+UseG1GC \
+-XX:MaxGCPauseMillis=50 \
+-XX:G1HeapRegionSize=4m \
+-XX:ParallelGCThreads=2 \
+-XX:ConcGCThreads=1 \
+-XX:InitiatingHeapOccupancyPercent=20 \
+-XX:G1ReservePercent=10 \
+-XX:+AlwaysPreTouch \
+-XX:+UnlockExperimentalVMOptions \
+-XX:+UseDynamicNumberOfGCThreads \
+-XX:+DisableExplicitGC \
+-XX:+TieredCompilation \
+-XX:+OptimizeStringConcat \
+-XX:+UseStringDeduplication \
+-XX:+PerfDisableSharedMem \
+-XX:+HeapDumpOnOutOfMemoryError \
+-XX:HeapDumpPath=/tmp/heapdump.hprof \
+-Djdk.virtualThreadScheduler.parallelism=8 \
+-Djdk.virtualThreadScheduler.maxPoolSize=256 \
+-Djdk.virtualThreadScheduler.minRunnable=8 \
+-Djdk.tracePinnedThreads=short \
+"
 
 ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -jar application.jar --spring.profiles.active=${SPRING_PROFILES_ACTIVE}"]
